syntax = "proto3";

package autotest;

option go_package = "github.com/authena-ru/auto-test/internal/server";

service AutoTestService {
    rpc CheckAttemptToPassTestingTask(CheckAttemptRequest) returns (CheckAttemptResponse) {}
}

message CheckAttemptRequest {
    repeated TestPoint test_points = 1;
    GradeScale grade_scale = 2;
}

message TestPoint {
    repeated int32 correct_variant_numbers = 1;
    repeated int32 chosen_variant_numbers = 2;
}

message GradeScale {
    int32 excellent_lower_bound = 1;
    int32 good_lower_bound = 2;
    int32 satisfactory_lower_bound = 3;
}

message CheckAttemptResponse {
    enum Grade {
        EXCELLENT = 0;
        GOOD = 1;
        SATISFACTORY = 2;
        UNSATISFACTORY = 3;
    }
    Grade grade = 1;
    int32 percent = 2;
}

